appId: com.prodify.app
---
- runFlow:
    when:
      visible: ".*Open in.*"
    commands:
      - tapOn: "Open"
- runFlow:
    when:
      visible: "Open"
    commands:
      - tapOn: "Open"
- runFlow:
    when:
      visible: "Continue"
    commands:
      - tapOn: "Continue"
